# cmprsr-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  big_test.txt  out.cmpr  test.cmpr
data/: test.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress_safety.rs  roundtrip.rs
src/: bitio.rs  canonical.rs  compress.rs  decoder.rs  decompress.rs  encoder.rs  format.rs  frequency.rs  huffman.rs  lib.rs  main.rs  utils.rs
