[package]
name = "cmprsr-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cmprsr-rs]
path = ".."

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompress_safety"
path = "fuzz_targets/decompress_safety.rs"
test = false
doc = false
bench = false
